--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -6,4 +6,7 @@ autoinstall:
     username: pedrofelipe
     password: '$y$j9T$FekICyk5nXxOOn5at0/CI.$m5H9NZFYngr7dsqKr3Pc5fk.oV4VGEzXjAPZ9Kas8q4'
     hostname: ubuntu-pedro
-    
+    locale: pt_BR.utf8
+    keyboard:
+        layout: br
+    timezone: "America/Sao_Paulo" 
